# aot_access

./: .gitignore  .readthedocs.yaml  CLAUDE.md  README.md  pyproject.toml  setup.py
AOTaccess/: __init__.py  anatomy_access.py  aot_access.py  betas_access.py  bids_access.py  brain.py  config.py  discovery.py  errors.py  expdesign_access.py  explog_access.py  fmriprep_access.py  glmsingle_access.py  group.py  localizer_access.py  memoryscore_access.py  naming.py  preproced_access.py  prf_access.py  roi_access.py  settings.yml  stimuliinfo_access.py  stimulus_info_access.py  subject.py  tsv_access.py
AOTaccess/notebooks/: all_function_usage_display.ipynb  test_bidsaccess.ipynb  test_expdesign.ipynb  test_explog_access.ipynb  test_glmsingle.ipynb  test_glmsingle_access.ipynb  test_preproced_access.ipynb  test_stimulus_info_access.ipynb
AOTaccess/temp/: test.ipynb  test_video_betas_read.ipynb  trailgenerating.py  video_display_and_description.ipynb
AOTaccess/users/: users_config.yml
docs/: conf.py  index.rst
docs/api/: index.rst
docs/examples/: README.txt  plot_01_quickstart.py  plot_02_discovery.py  plot_03_brain_mask_and_rois.py  plot_04_video_betas.py  plot_05_run_betas_composition.py  (+5 more)
schemas/: localizer-manifest.example.yaml
temp/: video_display_test.ipynb
tests/: conftest.py  test_anatomy_access.py  test_brain.py  test_config.py  test_discovery.py  test_errors.py  test_facade.py  test_glmsingle_access.py  test_group.py  test_localizer_access.py  test_naming.py  test_prf_access.py  test_roi_access.py  test_stimulus_annotations.py  test_subject.py
(+21 files in other folders)
